gitops/instances/rhoai-model-serving/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/display-name: GPT OSS 20b Model Serving
  labels:
    # Marks this as an OpenShift AI data-science project and tells KServe (not
    # ModelMesh) to manage serving in this namespace.
    opendatahub.io/dashboard: "true"
    modelmesh-enabled: "false"
    openshift.io/cluster-monitoring: "true"
  name: gpt-oss-20b
